implementing required permissions for widgets
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24407

--- a/TOneV2/Code/TOneV2/TOne.BI.Web/BI/Directives/Templates/vr-chart-bi-directive-template.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/BI/Directives/Templates/vr-chart-bi-directive-template.html
@@ -13,6 +13,6 @@
     </vr-columns>
 
     <vr-columns width="normal" ng-show=" selectedOperationType.value == 'MeasuresGroupedByTime'">
-        <vr-select datasource="definitionTypes" datatextfield="value" datavaluefield="description" label="Definition Type" selectedvalues="selectedDefinitionType" hidefilterbox></vr-select>
+        <vr-select datasource="definitionTypes" datatextfield="value" datavaluefield="description" label="Chart Type" selectedvalues="selectedDefinitionType" hidefilterbox></vr-select>
     </vr-columns>
 </div>
