--- a/Vanrise/Code/Vanrise.Web/Client/Views/TestView.html
+++ b/Vanrise/Code/Vanrise.Web/Client/Views/TestView.html
@@ -16,11 +16,102 @@ ff
 
 </vr-datagridcell>
 <input type="button" ng-click="addItem()" value="Add Item" />
-<vr-datagrid datasource="gridData" maxheight="400px" loadmoredata="loadMoreData" on-ready="gridReady">
+<vr-datagrid datasource="gridData" maxheight="400px" loadmoredata="loadMoreData" rotate="true" mtop="100" mbbotom="50" on-ready="gridReady">
+    <vr-datagridcolumn headertext="'Column '" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column '">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column '" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
     </vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Column 4'">
         <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column e'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column e'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column '" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column '" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column '">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column '" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column e'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column e'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column '" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 4'">
+        <input type="text" ng-model="dataItem.col3" />
+    </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Column 3'" field="'col3'">
     </vr-datagridcolumn>
 </vr-datagrid>
 
