--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetails.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetails.html
@@ -59,32 +59,35 @@
                                     </vr-datagrid>
 
                                 </div>
-                                <div ng-show="ctrl.isNumberProfileTabShown" style="width:200%">
-                                    <vr-datagrid datasource="numberProfiles" maxheight="300px" loadmoredata="loadMoreDataNumberProfiles" on-ready="onNumberProfilesGridReady">
-                                        <vr-datagridcolumn headertext="'From Date'" field="'FromDate'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'To Date'" field="'ToDate'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutCalls'" field="'CountOutCalls'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'DiffOutputNumb'" field="'DiffOutputNumb'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutInter'" field="'CountOutInter'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInInter'" field="'CountInInter'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CallOutDurAvg'" field="'CallOutDurAvg'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutFail'" field="'CountOutFail'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInFail'" field="'CountInFail'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'TotalOutVolume'" field="'TotalOutVolume'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'TotalInVolume'" field="'TotalInVolume'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'DiffInputNumbers'" field="'DiffInputNumbers'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutSMS'" field="'CountOutSMS'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'TotalIMEI'" field="'TotalIMEI'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'TotalBTS'" field="'TotalBTS'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'TotalDataVolume'" field="'TotalDataVolume'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInCalls'" field="'CountInCalls'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CallInDurAvg'" field="'CallInDurAvg'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutOnNet'" field="'CountOutOnNet'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInOnNet'" field="'CountInOnNet'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutOffNet'" field="'CountOutOffNet'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInOffNet'" field="'CountInOffNet'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountConsecutiveCalls'" field="'CountConsecutiveCalls'" widthfactor="13">  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInLowDurationCalls'" field="'CountInLowDurationCalls'" widthfactor="13">  </vr-datagridcolumn>
+                                <div ng-show="ctrl.isNumberProfileTabShown" >
+                                    <vr-datagrid datasource="numberProfiles" maxheight="300px" rotate="true" loadmoredata="loadMoreDataNumberProfiles" on-ready="onNumberProfilesGridReady">
+
+                                        <vr-datagridcolumn headertext="'From Date'" widthfactor="25">{{dataItem.FromDate | date:'yyyy-MM-dd hh:mm' }}</vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'To Date'" widthfactor="25">{{dataItem.ToDate | date:'yyyy-MM-dd hh:mm' }}</vr-datagridcolumn>
+
+                                        <vr-datagridcolumn headertext="'CountOutCalls'" field="'CountOutCalls'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'DiffOutputNumb'" field="'DiffOutputNumb'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutInter'" field="'CountOutInter'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInInter'" field="'CountInInter'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CallOutDurAvg'" field="'CallOutDurAvg'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutFail'" field="'CountOutFail'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInFail'" field="'CountInFail'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalOutVolume'" field="'TotalOutVolume'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalInVolume'" field="'TotalInVolume'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'DiffInputNumbers'" field="'DiffInputNumbers'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutSMS'" field="'CountOutSMS'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalIMEI'" field="'TotalIMEI'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalBTS'" field="'TotalBTS'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalDataVolume'" field="'TotalDataVolume'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInCalls'" field="'CountInCalls'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CallInDurAvg'" field="'CallInDurAvg'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutOnNet'" field="'CountOutOnNet'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInOnNet'" field="'CountInOnNet'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutOffNet'" field="'CountOutOffNet'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInOffNet'" field="'CountInOffNet'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountConsecutiveCalls'" field="'CountConsecutiveCalls'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'Count In Low Duration Calls'" field="'CountInLowDurationCalls'"  >  </vr-datagridcolumn>
+
                                     </vr-datagrid>
                                 </div>
                             </vr-columns>
