--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Views/DataSourceManagement.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Views/DataSourceManagement.html
@@ -1,18 +1,23 @@
 ﻿<vr-panel ng-controller="Integration_DataSourceManagementController">
-    <vr-row removeline>
-        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-            <div transclude-to="buttons">
-                <vr-button type="Add" data-onclick="AddNewDataSource"></vr-button>
+    <vr-form name="formFilter">
+        <vr-row removeline>
+            <div style="margin-top:30px">
+                <vr-actionbar showcollapsebutton="true">
+                    <div transclude-to="buttons">
+                        <vr-button type="Add" data-onclick="AddNewDataSource"></vr-button>
+                    </div>
+                </vr-actionbar>
             </div>
-        </vr-actionbar>
-    </vr-row>
-
-    <vr-row>
-        <vr-columns colnum="12" simplecol>
-            <vr-datagrid datasource="dataSources" menuactions="gridMenuActions" on-ready="onMainGridReady">
-                <vr-datagridcolumn headertext="'DataSource Id'" field="'DataSourceId'"></vr-datagridcolumn>
-                <vr-datagridcolumn headertext="'Adapter Name'" field="'AdapterName'"></vr-datagridcolumn>
-            </vr-datagrid>
-        </vr-columns>
-    </vr-row>
+        </vr-row>
+    </vr-form>
+    <div>
+        <vr-row>
+            <vr-columns colnum="12" simplecol>
+                <vr-datagrid datasource="dataSources" menuactions="gridMenuActions" on-ready="onMainGridReady">
+                    <vr-datagridcolumn headertext="'DataSource Id'" field="'DataSourceId'"></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Adapter Name'" field="'AdapterName'"></vr-datagridcolumn>
+                </vr-datagrid>
+            </vr-columns>
+        </vr-row>
+    </div>
 </vr-panel>
