--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/RouteOverrideTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/EditorTemplates/RouteOverrideTemplate.html
@@ -18,7 +18,7 @@
                     </div>
                 </li>
             </ul>
-            <div style="height:300px;overflow-x:auto;">
+            <div style="height: 300px; overflow-x: auto; min-width: 300px; ">
                 <ul class="list-group dragbelzone" ng-sortable="itemsSortable" ng-show="selectedSuppliers.length > 0">
                     <li ng-repeat="item in selectedSuppliers" class="list-group-item list-custom" style="margin: 1px; font-size: 12px">
                         <i class="glyphicon glyphicon-th-list handeldrag"></i>
