--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReportsDestinations.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReportsDestinations.html
@@ -2,17 +2,23 @@
     <h4>{{selectedReportOption.description}}</h4>
     <vr-datagrid datasource="data" data-on-ready="onMainGridReady">
         <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'_AVG'" field="'PeriodTypeValueAverage'" type="'Number'" summaryfield="'TotalAverage'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'_%'" field="'PeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPercentage'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPreviousPercentage'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'{{timePeriod.description}} AVG'" field="'PeriodTypeValueAverage'" type="'Number'" summaryfield="'TotalAverage'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'{{timePeriod.description}} %'" field="'PeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPercentage'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Previous {{timePeriod.description}} %'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPreviousPercentage'"></vr-datagridcolumn>
         <vr-datagridcolumn ng-repeat="item in timeRanges" field="'Values[' + $index + ']'" headertext="item" type="'Number'" summaryfield="'TotalValues[' + $index + ']'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'" ng-show="false"></vr-datagridcolumn>
-        <vr-datagridexpandablerow>
-            <!--if reportOption=Out -- we should disable the expandable row-->
-            <div ng-include="'/Client/Modules/Analytics/Views/Billing Statistics/VariationReportsCustomersSuppliers.html'"></div>
+        <vr-datagridexpandablerow> 
+            <!--if reportOption=Out -- we should disable the expandable row ng-if="viewScope.showCustomersSuppliersSection" -->
+            <div ng-if="true" ng-include="'/Client/Modules/Analytics/Views/Billing Statistics/VariationReportsCustomersSuppliers.html'"></div>
         </vr-datagridexpandablerow>
     </vr-datagrid>
-    <!--<vr-row>
+    {{showCustomersSuppliersSection}}
+    <!--<vr-row>  
+        
+        ng-if="viewScope.showCustomersSuppliersSection" 
+        viewScope.get("showCustomersSuppliersSection")
+         {{showCustomersSuppliersSection}}
+
         <vr-columns colnum="2">
             {{summarydata.TotalAverage}}
         </vr-columns>
