--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspicionAnalysis.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspicionAnalysis.html
@@ -4,7 +4,7 @@
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-select datasource="strategies" datatextfield="name" datavaluefield="id" label="Strategy" selectedvalues="selectedStrategies" ></vr-select>
+                    <vr-select datasource="strategies" datatextfield="name" datavaluefield="id" label="Strategy" selectedvalues="selectedStrategies" ismultipleselection></vr-select>
                 </vr-columns>
                 <vr-columns colnum="2">
                     <vr-select datasource="suspicionLevels" datatextfield="name" datavaluefield="id" label="Suspicion Levels"  selectedvalues="selectedSuspicionLevels" ismultipleselection></vr-select>
