--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspicionAnalysis.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspicionAnalysis.html
@@ -4,7 +4,7 @@
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-select datasource="strategies" datatextfield="name" datavaluefield="id" label="Strategy" selectedvalues="selectedStrategies" ismultipleselection></vr-select>
+                    <vr-select datasource="strategies" datatextfield="name" datavaluefield="id" label="Strategy" selectedvalues="selectedStrategies" ></vr-select>
                 </vr-columns>
                 <vr-columns colnum="2">
                     <vr-select datasource="suspicionLevels" datatextfield="name" datavaluefield="id" label="Suspicion Levels"  selectedvalues="selectedSuspicionLevels" ismultipleselection></vr-select>
@@ -31,7 +31,7 @@
         <vr-row>
             <vr-columns colnum="12" simplecol>
                 <vr-datagrid datasource="fraudResults" menuactions="gridMenuActions" maxheight="400px" loadmoredata="loadMoreData" on-ready="onMainGridReady">
-                    <vr-datagridcolumn headertext="'Last Occurance'" widthfactor="25">{{dataItem.LastOccurance | date:'yyyy-MM-dd hh:mm' }}</vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Last Occurance'" widthfactor="25" field="'LastOccurance'" type="'Datetime'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Subscriber Number'" field="'SubscriberNumber'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Suspicion Level'" field="'SuspicionLevelName'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Strategy'" field="'StrategyName'"></vr-datagridcolumn>
