--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetails.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousNumberDetails.html
@@ -42,7 +42,7 @@
                     <div>
                         <vr-row>
                             <vr-columns colnum="12">
-                                <div ng-show="ctrl.isNormalCDRTabShown">
+                                <div ng-show="ctrl.isNormalCDRTabShown" vr-loader="isGettingNormalCDRs">
                                     <vr-datagrid datasource="normalCDRs" maxheight="300px" loadmoredata="loadMoreDataNormalCDRs" on-ready="onNormalCDRsGridReady">
                                         <vr-datagridcolumn headertext="'IMSI'" field="'IMSI'" widthfactor="13">  </vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'Connect'" field="'ConnectDateTime'" widthfactor="17">  </vr-datagridcolumn>
@@ -59,34 +59,34 @@
                                     </vr-datagrid>
 
                                 </div>
-                                <div ng-show="ctrl.isNumberProfileTabShown" >
+                                <div ng-show="ctrl.isNumberProfileTabShown" vr-loader="isGettingNumberProfiles">
                                     <vr-datagrid datasource="numberProfiles" maxheight="300px" rotate="true" loadmoredata="loadMoreDataNumberProfiles" on-ready="onNumberProfilesGridReady">
 
                                         <vr-datagridcolumn headertext="'From Date'" widthfactor="25">{{dataItem.FromDate | date:'yyyy-MM-dd hh:mm' }}</vr-datagridcolumn>
                                         <vr-datagridcolumn headertext="'To Date'" widthfactor="25">{{dataItem.ToDate | date:'yyyy-MM-dd hh:mm' }}</vr-datagridcolumn>
 
-                                        <vr-datagridcolumn headertext="'CountOutCalls'" field="'CountOutCalls'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'DiffOutputNumb'" field="'DiffOutputNumb'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutInter'" field="'CountOutInter'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInInter'" field="'CountInInter'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CallOutDurAvg'" field="'CallOutDurAvg'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutFail'" field="'CountOutFail'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInFail'" field="'CountInFail'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'TotalOutVolume'" field="'TotalOutVolume'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'TotalInVolume'" field="'TotalInVolume'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'DiffInputNumbers'" field="'DiffInputNumbers'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutSMS'" field="'CountOutSMS'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'TotalIMEI'" field="'TotalIMEI'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'TotalBTS'" field="'TotalBTS'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'TotalDataVolume'" field="'TotalDataVolume'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInCalls'" field="'CountInCalls'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CallInDurAvg'" field="'CallInDurAvg'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutOnNet'" field="'CountOutOnNet'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInOnNet'" field="'CountInOnNet'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountOutOffNet'" field="'CountOutOffNet'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountInOffNet'" field="'CountInOffNet'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'CountConsecutiveCalls'" field="'CountConsecutiveCalls'"  >  </vr-datagridcolumn>
-                                        <vr-datagridcolumn headertext="'Count In Low Duration Calls'" field="'CountInLowDurationCalls'"  >  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutCalls'" field="'CountOutCalls'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'DiffOutputNumb'" field="'DiffOutputNumb'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutInter'" field="'CountOutInter'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInInter'" field="'CountInInter'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CallOutDurAvg'" field="'CallOutDurAvg'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutFail'" field="'CountOutFail'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInFail'" field="'CountInFail'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalOutVolume'" field="'TotalOutVolume'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalInVolume'" field="'TotalInVolume'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'DiffInputNumbers'" field="'DiffInputNumbers'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutSMS'" field="'CountOutSMS'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalIMEI'" field="'TotalIMEI'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalBTS'" field="'TotalBTS'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'TotalDataVolume'" field="'TotalDataVolume'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInCalls'" field="'CountInCalls'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CallInDurAvg'" field="'CallInDurAvg'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutOnNet'" field="'CountOutOnNet'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInOnNet'" field="'CountInOnNet'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountOutOffNet'" field="'CountOutOffNet'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountInOffNet'" field="'CountInOffNet'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'CountConsecutiveCalls'" field="'CountConsecutiveCalls'">  </vr-datagridcolumn>
+                                        <vr-datagridcolumn headertext="'Count In Low Duration Calls'" field="'CountInLowDurationCalls'">  </vr-datagridcolumn>
 
                                     </vr-datagrid>
                                 </div>
