git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24483

--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyManagement.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyManagement.html
@@ -26,7 +26,7 @@
         </vr-row>
     </vr-form>
 
-    <div>
+    <div vr-loader="isGettingStrategies">
         <vr-row>
             <vr-columns colnum="12" simplecol>
                 <vr-datagrid datasource="strategies" menuactions="gridMenuActions" maxheight="400px" loadmoredata="loadMoreData" on-ready="onMainGridReady">
