--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingManagement/RoutingManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingManagement/RoutingManagement.html
@@ -43,9 +43,9 @@
                     <vr-datagridcolumn headertext="'Rate'" field="'Rate'" widthfactor="5">
                     </vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Suppliers'" widthfactor="30">
-                        <span ng-repeat="option in dataItem.Options" style="margin-right:8px;">
-                            <span style="font-weight:bold">     {{option.Supplier}}</span>
-                            <span style="font-weight:bold" ng-show="option.Percentage > 0">     {{option.Percentage}}</span>
+                        <span ng-repeat="option in dataItem.Options" style="margin-right:8px;" title="{{option.Supplier}}, Zone:{{option.ZoneName}}, Rate: {{option.Rate}} ">
+                            <span style="font-weight:bold">{{option.Supplier}}</span>
+                            <span style="font-weight:bold" ng-show="option.Percentage > 0">{{option.Percentage}}</span>
                         </span>
                     </vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Affected Rule'" field="'ruleTypeName'" isclickable="'true'" onclicked="onRuleClicked"></vr-datagridcolumn>
@@ -71,19 +71,13 @@
                             </vr-datagridcolumn>
                         </vr-datagrid>
 
-
-                        <vr-datagrid ng-show="choiceRouteRulesSelected" datasource="dataItem.Rules" on-ready="ruleGridReady" menuactions="viewScope.gridRulesMenuActions">
-                            <vr-datagridcolumn headertext="'Carriers'" field="'CarrierAccountDescription'">
-                            </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Rule Data Set'" field="'CodeSetDescription'">
-                            </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Rule Type'" field="'ActionDescription'">
-                            </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'Start Date'" field="'BeginEffectiveDate'">
-                            </vr-datagridcolumn>
-                            <vr-datagridcolumn headertext="'End date'" field="'EndEffectiveDate'">
-                            </vr-datagridcolumn>
-                        </vr-datagrid>
+                        <div ng-show="choiceRouteRulesSelected">
+                            <vr-row>
+                                <vr-columns colnum="12" simplecol>
+                                    <div ng-include="'/Client/Modules/Routing/Views/RoutingRules/RoutingRulesGrid.html'"
+                                </vr-columns>
+                            </vr-row>
+                        </div>
                     </vr-datagridexpandablerow>
                 </vr-datagrid>
             </vr-columns>
