--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/RoutingRules/RouteRuleEditor.html
@@ -22,7 +22,7 @@
                 </vr-row>
                 <h4 ng-show="selectedRuleType  && selectedRuleType.name != 'Block Route' && selectedRuleType.url!='' ">{{selectedRuleType.name}} Details:</h4>
                 <vr-row ng-show="selectedRuleType  && selectedRuleType.name != 'Block Route' && selectedRuleType.url!='' " ng-include src="selectedRuleType.url">
-                    
+
                     <!--<div class="col-lg-12 ">
                         <h4>{{selectedRuleType.name}} Details:</h4>
                     </div>
@@ -62,8 +62,29 @@
                 </vr-row>
             </div>
 
-            <div ng-show="choiceScheduleSelected" ng-include src="'/Client/Modules/Routing/Views/RoutingRules/EditorTemplates/TimeSettingTemplate.html'">
+            <div ng-show="choiceScheduleSelected">
+                <vr-row removeline>
+                    <vr-columns width="normal">
+                        <vr-datetimepicker label="Begin Effective Date:" type="date" value="BED" isrequired></vr-datetimepicker>
+                    </vr-columns>
+                    <vr-columns width="normal">
+                        <vr-datetimepicker label="End Effective Date:" type="date" value="EED"></vr-datetimepicker>
+                    </vr-columns>
+                </vr-row>
+                <vr-row removeline>
+                    <vr-columns width="normal">
+                        <vr-datetimepicker label="From Time:" type="date" value="FromTime"></vr-datetimepicker>
 
+                    </vr-columns>
+                    <vr-columns width="normal">
+                        <vr-datetimepicker label="To Time:" type="date" value="ToTime"></vr-datetimepicker>
+
+                    </vr-columns>
+                    <vr-columns width="normal">
+                        <vr-select label="Days" ismultipleselection hideselectedvaluessection="true" datatextfield="name" datavaluefield="value"
+                                   datasource="daysOfWeek" selectedvalues="selectedDaysOfWeek"></vr-select>
+                    </vr-columns>
+                </vr-row>
             </div>
         </vr-form>
     </vr-modalbody>
