--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/CDR/CDRLog.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/CDR/CDRLog.html
@@ -51,7 +51,7 @@
              <vr-row>
                  <vr-columns colnum="12" simplecol>
                      <vr-datagrid datasource="data" pagersettings="mainGridPagerSettings" data-on-ready="onMainGridReady" maxheight="500px" >
-                         <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName"  tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
+                         <vr-datagridcolumn ng-repeat="measure in measures" headertext="measure.description" field="measure.propertyName" Type="measure.type" tag="measure" onsortchanged="onMainGridSortChanged"></vr-datagridcolumn>
 
 
                      </vr-datagrid>
