--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousAnalysis/SuspicionAnalysis.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/SuspiciousAnalysis/SuspicionAnalysis.html
@@ -4,16 +4,17 @@
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-select datasource="strategies" datatextfield="name" datavaluefield="id" label="Strategy" selectedvalues="selectedStrategies" ismultipleselection></vr-select>
-                </vr-columns>
-                <vr-columns colnum="2">
-                    <vr-select datasource="suspicionLevels" datatextfield="name" datavaluefield="id" label="Suspicion Levels"  selectedvalues="selectedSuspicionLevels" ismultipleselection></vr-select>
-                </vr-columns>
-                <vr-columns colnum="2">
                     <vr-datetimepicker type="date" value="fromDate" label="From" isrequired customvalidate="customvalidateFrom"></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns colnum="2">
                     <vr-datetimepicker type="date" value="toDate" label="To" isrequired customvalidate="customvalidateTo"></vr-datetimepicker>
+                </vr-columns>
+
+                <vr-columns colnum="2">
+                    <vr-select datasource="strategies" datatextfield="name" datavaluefield="id" label="Strategy" selectedvalues="selectedStrategies" ismultipleselection></vr-select>
+                </vr-columns>
+                <vr-columns colnum="2">
+                    <vr-select datasource="suspicionLevels" datatextfield="name" datavaluefield="id" label="Suspicion Levels" selectedvalues="selectedSuspicionLevels" ismultipleselection></vr-select>
                 </vr-columns>
             </vr-row>
             <vr-row></vr-row>
@@ -31,7 +32,7 @@
         <vr-row>
             <vr-columns colnum="12" simplecol>
                 <vr-datagrid datasource="fraudResults" menuactions="gridMenuActions" maxheight="400px" loadmoredata="loadMoreData" on-ready="onMainGridReady">
-                    <vr-datagridcolumn headertext="'Last Occurance'" widthfactor="25" field="'LastOccurance'" type="'Datetime'"></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Last Occurance'" field="'LastOccurance'" type="'Datetime'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Subscriber Number'" field="'SubscriberNumber'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Suspicion Level'" field="'SuspicionLevelName'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Strategy'" field="'StrategyName'"></vr-datagridcolumn>
