Drag drop modal  Add
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24515

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/UserEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/UserEditor.html
@@ -1,4 +1,4 @@
-﻿<div vr-modalcontent ng-controller="Security_UserEditorController">
+﻿<div vr-modalcontent draggable="" ng-controller="Security_UserEditorController">
     <vr-modalbody width="'50%'" vr-loader="isGettingData">
         <vr-form name="formUserEditor">
             <vr-row>
