Add loged user dropdown
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24516

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/Login.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/Login.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="row login-spacer">
                     <div class="col-md-8 col-md-offset-2">
-                        <a href="" class="pull-right fogetten-label">Forgotten Password</a>
+                        <a href="" class="pull-right fogetten-label">Forgot Password</a>
                     </div>
                 </div>
             </vr-form>
