--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/Strategy/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/Strategy/StrategyEditor.html
@@ -91,8 +91,8 @@
 
                     <div ng-show="ctrl.isLevelsTabShow">
                         <div>
-                            <div style="background-color:black">
-                                <vr-button type="Add" data-onclick="AddSuspicionLevel"></vr-button>
+                            <div>
+                                <vr-button type="Add" data-onclick="AddSuspicionLevel" standalone></vr-button>
                             </div>
                             <vr-datagrid datasource="strategyLevels" maxheight="400px">
                                 <vr-datagridcolumn headertext="'Suspicion Level'" widthfactor="20">  <vr-select datasource="viewScope.suspicionLevels" datatextfield="name" datavaluefield="id" ng-init="dataItem.suspicionLevel = (dataItem.suspicionLevel == undefined ? viewScope.suspicionLevels[0] : dataItem.suspicionLevel)" selectedvalues="dataItem.suspicionLevel" isrequired widthfactor="20" columnindex="0"></vr-select>       </vr-datagridcolumn>
